implement react modal component & service [#80891548]

--- a/app/adm-categories.haml
+++ b/app/adm-categories.haml
@@ -179,39 +179,39 @@
                           %td.adm-categories-goods-status Статус
                       %tbody
                         %tr
-                          %td.adm-categories-goods-cover{data: {title: "Товар"}, role: "modal-edit-product-toggle"}
+                          %td.adm-categories-goods-cover{data: {title: "Товар", url: "modal-edit-product.html"}, role: "modal-edit-product-toggle"}
                             /%a{:href => "#product", :title => "Мыльница с якорем"}
                             %img{:src => "assets/product-50x50-1.jpg", :alt => "Мыльница с якорем"}
-                          %td.adm-categories-goods-content{role: "modal-edit-product-toggle"}
+                          %td.adm-categories-goods-content{data: {url: "modal-edit-product.html"}, role: "modal-edit-product-toggle"}
                             /%a{:href => "#product", :title => "Мыльница с якорем"}
                             Мыльница с якорем
-                          %td.adm-categories-goods-price{data: {title: "Сумма"}, role: "modal-edit-product-toggle"}
+                          %td.adm-categories-goods-price{data: {title: "Сумма", url: "modal-edit-product.html"}, role: "modal-edit-product-toggle"}
                             %span.nobr 18 000 руб
-                          %td.adm-categories-goods-status{data: {title: "Статус"}, role: "modal-edit-product-toggle"}
+                          %td.adm-categories-goods-status{data: {title: "Статус", url: "modal-edit-product.html"}, role: "modal-edit-product-toggle"}
                             %span.label.label-success
                               Опубликован
                         %tr
-                          %td.adm-categories-goods-cover{data: {title: "Товар"}, role: "modal-edit-product-toggle"}
+                          %td.adm-categories-goods-cover{data: {title: "Товар", url: "modal-edit-product.html"}, role: "modal-edit-product-toggle"}
                             /%a{:href => "#product", :title => "Табуретка"}
                             %img{:src => "assets/product-50x50-2.jpg", :alt => "Табуретка"}
-                          %td.adm-categories-goods-content{role: "modal-edit-product-toggle"}
+                          %td.adm-categories-goods-content{data: {url: "modal-edit-product.html"}, role: "modal-edit-product-toggle"}
                             /%a{:href => "#product", :title => "Табуретка"}
                             Табуретка
-                          %td.adm-categories-goods-price{data: {title: "Сумма"}, role: "modal-edit-product-toggle"}
+                          %td.adm-categories-goods-price{data: {title: "Сумма", url: "modal-edit-product.html"}, role: "modal-edit-product-toggle"}
                             %span.nobr 3 999 руб
-                          %td.adm-categories-goods-status{data: {title: "Статус"}, role: "modal-edit-product-toggle"}
+                          %td.adm-categories-goods-status{data: {title: "Статус", url: "modal-edit-product.html"}, role: "modal-edit-product-toggle"}
                             %span.label.label-success
                               Опубликован
                         %tr
-                          %td.adm-categories-goods-cover{data: {title: "Товар"}, role: "modal-edit-product-toggle"}
+                          %td.adm-categories-goods-cover{data: {title: "Товар", url: "modal-edit-product.html"}, role: "modal-edit-product-toggle"}
                             /%a{:href => "#product", :title => "Табуретка"}
                             %img{:src => "assets/product-50x50-2.jpg", :alt => "Табуретка"}
-                          %td.adm-categories-goods-content{role: "modal-edit-product-toggle"}
+                          %td.adm-categories-goods-content{data: {url: "modal-edit-product.html"}, role: "modal-edit-product-toggle"}
                             /%a{:href => "#product", :title => "Табуретка"}
                             Табуретка
-                          %td.adm-categories-goods-price{data: {title: "Сумма"}, role: "modal-edit-product-toggle"}
+                          %td.adm-categories-goods-price{data: {title: "Сумма", url: "modal-edit-product.html"}, role: "modal-edit-product-toggle"}
                             %span.nobr 5 999 руб
-                          %td.adm-categories-goods-status{data: {title: "Статус"}, role: "modal-edit-product-toggle"}
+                          %td.adm-categories-goods-status{data: {title: "Статус", url: "modal-edit-product.html"}, role: "modal-edit-product-toggle"}
                             %span.label.label-warning
                               Закончился
                     %button.adm-btn-add-goods
@@ -220,138 +220,3 @@
           / end Categories
       / end Layout Main
     / end Layout
-
-    / Modal Edit Product
-    .modal.modal-edit-product.fade{"aria-hidden" => "true", "aria-labelledby" => "mySmallModalLabel", :role => "modal-edit-product", :tabindex => "-1"}
-      .modal-dialog.modal-lg
-        .modal-content{role: 'modal-content'}
-          .modal-body
-            .adm-form-item
-              %form.simple_form.products__new-form
-                %header.adm-form-item-header
-                  .row
-                    .col-md-4
-                      %h1.adm-section-header-title Добавить товар
-                    .col-md-8
-                      %label.toggle__block{role: 'product-toggle'}
-                        .toggle__block-label-checked.pull-left
-                          Товар на сайте
-                        .toggle__block-box.pull-left
-                          %input.toggle__block-checkbox{type: 'checkbox'}
-                          .toggle__block-switch
-                          .toggle__block-track
-
-                        .toggle__block-label-unchecked.pull-left
-                          Скрыть товар
-                        .clearfix
-                  %hr
-                .row
-                  .col-md-10
-                    .form-alert.form-alert-danger
-                      Невозможно опубликовать товар. Проверьте поля, выделенные красным
-                    .form-group
-                      %label Фотографии
-                      .products__new-form-images-list.__small
-                        .products__new-form-image-thumb-block
-                          .products__new-form-image-thumb-empty
-                          .products__new-form-image-thumb-add
-                        .products__new-form-image-thumb-block
-                          %img.products__new-form-image-thumb{src: "assets/product-2-square.png", alt: ""}
-                          .products__new-form-image-thumb-remove
-                          .products__new-form-image-thumb-update
-                        .products__new-form-image-thumb-block
-                          %img.products__new-form-image-thumb{src: "assets/product-2-square.png", alt: ""}
-                          .products__new-form-image-thumb-remove
-                          .products__new-form-image-thumb-update
-                    .form-group
-                      %label Название товара
-                      %textarea.form-control.form-control-text-large{placeholder: 'Например, велосипед городской'}
-                    .row
-                      .col-sm-6
-                        .form-group
-                          %label Бренд
-                          %input.form-control{type: "text", placeholder: 'Бренд'}
-                      .col-sm-6
-                        .form-group
-                          %label Цена
-                          %input.form-control{type: "text", placeholder: '20 000'}
-                      .col-sm-6
-                        .form-group
-                          %label Категория
-                          %div( data-react-class="SuperSelect" data-react-props='{"name": "category_name", "value": "Кефир", "options":["Молоко", "Морепродукты", "Мопеды", "Брилианты", "Категория 2"]}')
-                      .col-sm-6
-                        .form-group
-                          %label Подкатегория
-                          %div( data-react-class="SuperSelect" data-react-props='{"name": "category_name", "value": "Кефир", "options":["Молоко", "Морепродукты", "Мопеды", "Брилианты", "Категория 2"]}')
-                    .form-group
-                      %label Варианты товара
-                      .form-block-group
-                        .form-group
-                          %a.products__new-form-variant-type-btn.active{role: 'products__new-form-variant-type-btn'} Размер
-                          %a.products__new-form-variant-type-btn{role: 'products__new-form-variant-type-btn'} Цвет
-                          %input.products__new-form-custom-variant-input{type: "text", placeholder: 'Другое', role: 'products__new-form-variant-type-input'}
-                        .row
-                          .col-md-11
-                            .row.row-block-padding
-                              .col-sm-4.hidden-xs
-                                %label{role: 'products__new-form-variant-type-label'} Размер
-                              .col-sm-4.hidden-xs
-                                %label Количество
-                              .col-sm-4.hidden-xs
-                                %label Артикул
-
-                        .row{role: 'products__new-form-variants-item'}
-                          .col-md-12
-                          .col-md-11
-                            .row.row-block-padding
-                              .col-sm-4
-                                %label.hidden-sm.hidden-md.hidden-lg Размер
-                                %input.form-control{type: "text", placeholder: 'Например, XL'}
-                              .col-sm-4
-                                %label.hidden-sm.hidden-md.hidden-lg Количество
-                                %input.form-control{type: "text", placeholder: 'Например, 5'}
-                              .col-sm-4
-                                %label.hidden-sm.hidden-md.hidden-lg Артикул
-                                %input.form-control{type: "text", placeholder: 'Например, M001-11-00'}
-                            %br
-                          .col-md-1
-                            %a.products__new-form-remove-variant-btn.pull-right
-                            .clearfix
-                        .row{role: 'products__new-form-variants-place'}
-
-                        .form-group
-                          -#input.btn.form-control{type: "text", placeholder: 'Добавить размеры и цвета'}
-                          .btn-add-fields{role: 'products__new-form-variants-add'}
-                            Добавить ещё
-
-                    .form-group.text
-                      %label
-                        Описание
-                      %textarea.form-control{placeholder: 'Описание', required: 'required', role: 'autosize'}
-
-                    .form-group
-                      %label Характеристики
-                      .row
-                        .col-sm-6
-                          .form-group-sm
-                            %input.form-control{type: 'text', placeholder: 'Например, вес'}
-                        .col-sm-6
-                          .row-gutter-dash.text-muted
-                            &mdash;
-                          .form-group-sm
-                            %input.form-control{type: 'text', placeholder: '11 грамм'}
-                      .row
-                        .col-sm-6
-                          .form-group-sm
-                            %input.form-control{type: 'text', placeholder: 'Например, вес'}
-                        .col-sm-6
-                          .row-gutter-dash.text-muted
-                            &mdash;
-                          .form-group-sm
-                            %input.form-control{type: 'text', placeholder: '11 грамм'}
-                %footer.adm-form-item-footer
-                  %button.adm-btn-submit{'data-disable-with' => 'Сохраняем...', :type => 'submit'}
-                    Сохранить
-                  %button.adm-btn-remove
-                    Удалить товар навсегда
-      / end Modal Edit Product
