rework OperatorCategories using new design
[#80970394]

--- a/app/adm-categories.haml
+++ b/app/adm-categories.haml
@@ -43,180 +43,7 @@
                   %form.adm-categories-search-form{action: '?'}
                     %input.adm-categories-search-field.form-control{type: 'text', placeholder: 'Поиск по товарам'}
             .adm-categories-body
-              .adm-categories-grid
-                .adm-categories-grid-col{role: 'categories-list'}
-                  .adm-categories-list
-                    .adm-categories-item{class: 'selected'}
-                      %span.adm-categories-item-name Все товары
-                      %span.adm-categories-item-counter 353
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item
-                      %span.adm-categories-item-name Велосипеды
-                      %span.adm-categories-item-counter 45
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item
-                      %span.adm-categories-item-name Компоненты
-                      %span.adm-categories-item-counter 5
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item{class: '__edit'}
-                      %input.adm-categories-item-field{type: 'text', :value => "Велозапчасти"}
-                      %span.adm-categories-item-remove
-                    .adm-categories-item
-                      %span.adm-categories-item-name Распродажа
-                      %span.adm-categories-item-counter 21
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item
-                      %span.adm-categories-item-name Все товары
-                      %span.adm-categories-item-counter 353
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item
-                      %span.adm-categories-item-name Велосипеды
-                      %span.adm-categories-item-counter 45
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item
-                      %span.adm-categories-item-name Компоненты
-                      %span.adm-categories-item-counter 5
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item
-                      %span.adm-categories-item-name Распродажа
-                      %span.adm-categories-item-counter 21
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item
-                      %span.adm-categories-item-name Велосипеды
-                      %span.adm-categories-item-counter 45
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item
-                      %span.adm-categories-item-name Компоненты
-                      %span.adm-categories-item-counter 5
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item
-                      %span.adm-categories-item-name Распродажа
-                      %span.adm-categories-item-counter 21
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item
-                      %span.adm-categories-item-name Велосипеды
-                      %span.adm-categories-item-counter 45
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item
-                      %span.adm-categories-item-name Компоненты
-                      %span.adm-categories-item-counter 5
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item
-                      %span.adm-categories-item-name Распродажа
-                      %span.adm-categories-item-counter 21
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item{class: '__edit'}
-                      %input.adm-categories-item-field{type: 'text', placeholder: 'Новая категория'}
-                    .adm-categories-item{class: '__muted'}
-                      %span.adm-categories-item-name Без категории
-                      %span.adm-categories-item-counter 21
-                .adm-categories-grid-col{role: 'categories-list'}
-                  .adm-categories-list
-                    .adm-categories-item
-                      %span.adm-categories-item-name Все товары
-                      %span.adm-categories-item-counter
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item
-                      %span.adm-categories-item-name Городские
-                      %span.adm-categories-item-counter 5
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item{class: 'selected'}
-                      %span.adm-categories-item-name Складные
-                      %span.adm-categories-item-counter 10
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item
-                      %span.adm-categories-item-name Триатлон
-                      %span.adm-categories-item-counter 54
-                      %button.adm-btn-edit-category{title: 'Редактировать'}
-                        %span
-                          Редактировать
-                    .adm-categories-item{class: '__edit'}
-                      %input.adm-categories-item-field{type: 'text', :placeholder => "Новая подкатегория"}
-                    .adm-categories-item{class: '__muted'}
-                      %span.adm-categories-item-name Без подкатегории
-                      %span.adm-categories-item-counter 21
-                .adm-categories-grid-col.__wide
-                  .adm-categories-content
-                    %table.adm-categories-goods
-                      %thead
-                        %tr
-                          %td{:colspan => 2} Товар
-                          %td.adm-categories-goods-price Цена
-                          %td.adm-categories-goods-status Статус
-                      %tbody
-                        %tr
-                          %td.adm-categories-goods-cover{data: {title: "Товар", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
-                            /%a{:href => "#product", :title => "Мыльница с якорем"}
-                            %img{:src => "assets/product-50x50-1.jpg", :alt => "Мыльница с якорем"}
-                          %td.adm-categories-goods-content{data: {modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
-                            /%a{:href => "#product", :title => "Мыльница с якорем"}
-                            Мыльница с якорем
-                          %td.adm-categories-goods-price{data: {title: "Сумма", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
-                            %span.nobr 18 000 руб
-                          %td.adm-categories-goods-status{data: {title: "Статус", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
-                            %span.label.label-success
-                              Опубликован
-                        %tr
-                          %td.adm-categories-goods-cover{data: {title: "Товар", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
-                            /%a{:href => "#product", :title => "Табуретка"}
-                            %img{:src => "assets/product-50x50-2.jpg", :alt => "Табуретка"}
-                          %td.adm-categories-goods-content{data: {modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
-                            /%a{:href => "#product", :title => "Табуретка"}
-                            Табуретка
-                          %td.adm-categories-goods-price{data: {title: "Сумма", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
-                            %span.nobr 3 999 руб
-                          %td.adm-categories-goods-status{data: {title: "Статус", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
-                            %span.label.label-success
-                              Опубликован
-                        %tr
-                          %td.adm-categories-goods-cover{data: {title: "Товар", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
-                            /%a{:href => "#product", :title => "Табуретка"}
-                            %img{:src => "assets/product-50x50-2.jpg", :alt => "Табуретка"}
-                          %td.adm-categories-goods-content{data: {modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
-                            /%a{:href => "#product", :title => "Табуретка"}
-                            Табуретка
-                          %td.adm-categories-goods-price{data: {title: "Сумма", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
-                            %span.nobr 5 999 руб
-                          %td.adm-categories-goods-status{data: {title: "Статус", modal-url: "modal-edit-product.html"}, role: "modal-edit-product-toggle", "show-modal": true}
-                            %span.label.label-warning
-                              Закончился
-                    %button.adm-btn-add-goods
-                      %i.adm-btn-add-goods-icon
-                      Добавить новый товар
+              %div(data-react-class="OperatorCategories")
           / end Categories
       / end Layout Main
     / end Layout
