--- a/app/stylesheets/sass/bundle.scss
+++ b/app/stylesheets/sass/bundle.scss
@@ -110,6 +110,7 @@
 @import "modules/tables";
 
 // Новая вёрстка
+@import "modules/adm-auth";
 @import "modules/adm-sidebar-nav";
 @import "modules/adm-dropdown";
 @import "modules/adm-categories";
