--- a/app/stylesheets/sass/settings/_adm-layout.sass
+++ b/app/stylesheets/sass/settings/_adm-layout.sass
@@ -18,7 +18,7 @@ html
         image: url('#{$images-path}/adm-body-auth-dark.jpg')
       overflow-y: auto
       overflow-x: hidden
-      -webkit-overflow-scrolling: touch;
+      -webkit-overflow-scrolling: touch
 
 .adm-layout
   width: 90%
