fixed display dividing lines of categories

--- a/app/stylesheets/sass/modules/_adm-categories.sass
+++ b/app/stylesheets/sass/modules/_adm-categories.sass
@@ -53,7 +53,6 @@ $zindex-adm-categories-item-active: 10
   +box-shadow(none)
 
 .adm-categories-body
-  margin-top: -1px
   position: relative
 
 .adm-categories-grid
@@ -79,6 +78,7 @@ $zindex-adm-categories-item-active: 10
     top: 0
     bottom: 0
     background-color: $line-color
+    z-index: 1
   &:first-child
     &:before
       display: none
