--- a/app/stylesheets/sass/bundle.scss
+++ b/app/stylesheets/sass/bundle.scss
@@ -111,8 +111,10 @@
 
 // Новая вёрстка
 @import "modules/adm-auth";
+@import "modules/adm-topbar";
 @import "modules/adm-sidebar-nav";
 @import "modules/adm-dropdown";
 @import "modules/adm-categories";
 @import "modules/adm-orders";
 @import "modules/adm-order";
+@import "modules/adm-dashboard";
