--- a/app/stylesheets/sass/modules/_adm-order.sass
+++ b/app/stylesheets/sass/modules/_adm-order.sass
@@ -36,7 +36,9 @@
   & > .adm-order-status-info-time,
   & > .label,
   & > .dropdown
-    margin-right: 8px
+    margin:
+      top: 2px
+      right: 8px
 
 .adm-order-status-info
   .adm-order-header &,
