--- a/app/stylesheets/sass/modules/_modal.sass
+++ b/app/stylesheets/sass/modules/_modal.sass
@@ -24,3 +24,8 @@
     padding:
       top: $grid-gutter-width/2
       bottom: $grid-gutter-width/2
+
+@media screen and (max-width: $screen-sm-max)
+  .modal-lg
+    &.modal-dialog
+      margin-bottom: 10px
