--- a/app/stylesheets/sass/settings/_variables.sass
+++ b/app/stylesheets/sass/settings/_variables.sass
@@ -63,6 +63,7 @@ $block-padding: 20px
 // Z-index List
 $zindex-popup: 1000 // для popup-roducts (TODO: избавиться, т.к. не используется)
 $zindex-adm-dropdown-popup: 1000 !default
+$zindex-adm-topbar: 400 !default
 
 // Navbar
 $navbar-height:                    72px
