--- a/app/adm-categories.haml
+++ b/app/adm-categories.haml
@@ -7,6 +7,8 @@
   %body.adm-body
     %script{src: 'scripts/bundle.js'}
 
+    +include './app/shared/_topbar.haml'
+
     / Layout
     .adm-layout
       +include './app/shared/_layout_sidebar.haml'
