--- a/app/stylesheets/sass/settings/_adm-layout.sass
+++ b/app/stylesheets/sass/settings/_adm-layout.sass
@@ -11,6 +11,7 @@ html
       width: 100%
       height: 100%
       margin: 0
+      padding: 0
       background:
         repeat: no-repeat
         position: 50% 50%
@@ -22,12 +23,15 @@ html
 
 .adm-layout
   width: 90%
-  margin: 20px auto
+  margin: 0 auto
+  padding: 20px 0
   @include clearfix
 
+// Sidebar
 .adm-layout-sidebar
   padding-bottom: 20px
 
+// Main
 .adm-layout-main
   min-height: 500px
   background-color: #fff
@@ -36,6 +40,7 @@ html
 .adm-layout-main-inner
   padding: ($grid-gutter-width - 10) $grid-gutter-width
 
+// Section Header
 .adm-section-header
   margin-bottom: 20px
 
@@ -43,6 +48,7 @@ html
   margin: 0
   font-size: 28px
 
+// Grid Full
 .adm-grid-full
   width: 100%
   height: 100%
@@ -52,6 +58,7 @@ html
   display: table-cell
   vertical-align: middle
 
+// Media Queries
 @media (min-width: $screen-sm-min)
   .adm-layout
     width: 740px
